--- a/src/auth/login/login.component.html
+++ b/src/auth/login/login.component.html
@@ -11,12 +11,12 @@
       <div class="carousel">
         <div class="images-wrapper">
           <img
-            src="Perizie-1-scaled.jpg"
+            src="../../assets/img/Perizie-1-scaled.jpg"
             class="image img-1 show"
             alt="Perizia 1"
           />
-          <img src="Perizie-2-scaled.jpg" class="image img-2" alt="Perizia 2" />
-          <img src="Perizie-3-scaled.jpg" class="image img-3" alt="Perizia 3" />
+          <img src="../../assets/img/Perizie-2-scaled.jpg" class="image img-2" alt="Perizia 2" />
+          <img src="../../assets/img/Perizie-3-scaled.jpg" class="image img-3" alt="Perizia 3" />
         </div>
         <div class="text-slider">
           <div class="text-wrap">
