--- a/src/auth/login/login.component.html
+++ b/src/auth/login/login.component.html
@@ -86,14 +86,14 @@
               Sign In
             </button>
 
-            <div class="google-login">
+            <!-- <div class="google-login">
               <a
                 class="google-btn"
                 href="https://backend-rilievi.onrender.com/api/auth/google?redirectUrl=http://localhost:8101/home"
               >
                 <i class="fa-brands fa-google"></i> Sign in with Google
               </a>
-            </div>
+            </div> -->
             <p class="text">
               Dimenticato password?
               <a [routerLink]="['/forgot-password']">Richiedine una nuova</a>
